# Dot_n_Dash

./: CMakeLists.txt  DailyLog.md  Readme.md  reference text.txt  reseource.txt
Release/: Alpha-readme.md
lib-win32/pdcurses/include/: curses.h
src/: Dash.c  Dot.c  Game.c  Inbulit_types.h  dataStructures.c  main.c  trail  trail.c  trail.py
